--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 {% block header %}
-<script type="text/javascript" src="static/js/jquery.js"></script>
+<script type="text/javascript" src="../static/js/jquery.js"></script>
 <script>
 $( document).ready(function(){
     console.log('ready');
@@ -32,7 +32,7 @@ $( document).ready(function(){
 <div class="row">
 <h1>Submit processing job</h1>
 </div>
-<form class="form-horizontal" action="/jobrequestpost/" method="post" enctype="multipart/form-data">
+<form class="form-horizontal" action="/progress" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-lg-12">
             <div class="well bs-component">
@@ -56,7 +56,7 @@ $( document).ready(function(){
     <div class="row">
         <div class="col-lg-12">
             <div class="well bs-component">
-                <table class="table table-striped table-hover ">
+                <table class="table table-striped table-hover" id="line_checks_container">
                     <thead>
                         <tr>
                             <th>Process</th>
@@ -67,23 +67,23 @@ $( document).ready(function(){
                     <tbody>
                         {% for line in flightlines %}
                         <tr>
-                            <td><input type="checkbox" id="line_checks" name="{{ line }}_line_check" checked=""></td>
-                            <td>{{ line }}</td>
+                            <td><input type="checkbox" id="line_checkboxes" name="{{ line.name }}_line_check" checked=""></td>
+                            <td>{{ line.name }}</td>
                             <td>
                                 <table>
                                     <td>Start </td>
                                     <td>
-                                        <select class="form-control-small" id="{{ line }}_band_start" name="{{ line }}_band_start">
-                                            {% for band in bands %}
+                                        <select class="form-control-small" id="{{ line.name }}_band_start" name="{{ line.name }}_band_start">
+                                            {% for band in line.bands %}
                                             <option>{{ band }}</option>
                                             {% endfor %}
                                         </select>
                                     </td>
                                     <td>End</td>
                                     <td>
-                                        <select class="form-control-small" id="{{ line }}_band_stop" name="{{ line }}_band_stop">
-                                            {% for band in bands %}
-                                            <option {% if band == band_max %}selected{% endif %}>{{ band }}</option>
+                                        <select class="form-control-small" id="{{ line.name }}_band_stop" name="{{ line.name }}_band_stop">
+                                            {% for band in line.bands %}
+                                            <option {% if band == line.bandsmax %}selected=''{% endif %}>{{ band }}</option>
                                             {% endfor %}
                                         </select>
                                     </td>
@@ -96,6 +96,17 @@ $( document).ready(function(){
                             <td>Process all lines</td>
                         </tr>
                     </tbody>
+                    <script>
+                        $("#all_lines_check").change(function () {
+                            $("#line_checks_container :checkbox").prop('checked', $(this).prop('checked'));
+                        });
+
+                        $("#line_checks_container :checkbox").change(function () {
+                            if ($("#all_lines_check").prop('checked') == true) {
+                                $("#all_lines_check").prop('checked', $(this).prop("checked"));
+                            }
+                        });
+                    </script>
                 </table>
             </div>
         </div>
@@ -163,7 +174,7 @@ $( document).ready(function(){
                             <div class="radio">
                                 <label>
                                     {% if utmzone %}
-                                    <input type="radio" name="projectionRadios" id="optionsProjRadios3" value="{{ utmzone }}" checked="">
+                                    <input type="radio" name="projectionRadios" id="optionsProjRadios3" value="{{ utmzone }}" {% if not uk %}checked=""{% endif %}>
                                     {{ utmzone }}
                                     {% else %}
                                     <input type="radio" name="projectionRadios" id="optionsProjRadios3" value="utm" checked="">
@@ -174,7 +185,7 @@ $( document).ready(function(){
                             {% if uk %}
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="projectionRadios" id="optionsProjRadios3" value="UKBNG">
+                                    <input type="radio" name="projectionRadios" id="optionsProjRadios3" value="UKBNG" checked="">
                                     UKBNG
                                 </label>
                             </div>
@@ -220,19 +231,19 @@ $( document).ready(function(){
                         <div class="row">
                             <label for="bound_n" class="col-lg-3 control-label">Bounding N:</label>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control" id="bound_n" name="bound_n" placeholder={{ bounds.n }}>
+                                <input type="text" class="form-control" id="bound_n" name="bound_n" value={{ bounds.n }}>
                             </div>
                             <label for="bound_s" class="col-lg-1 control-label">S:</label>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control" id="bound_s" name="bound_s" placeholder={{ bounds.s }}>
+                                <input type="text" class="form-control" id="bound_s" name="bound_s" value={{ bounds.s }}>
                             </div>
                             <label for="bound_e" class="col-lg-3 control-label">E:</label>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control" id="bound_e" name="bound_e" placeholder={{ bounds.e }}>
+                                <input type="text" class="form-control" id="bound_e" name="bound_e" value={{ bounds.e }}>
                             </div>
                             <label for="bound_w" class="col-lg-1 control-label">W:</label>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control" id="bound_w" name="bound_w" placeholder={{ bounds.w }}>
+                                <input type="text" class="form-control" id="bound_w" name="bound_w" value={{ bounds.w }}>
                             </div>
                         </div>
                         <div class="row">
@@ -271,32 +282,19 @@ $( document).ready(function(){
     <input type="hidden" name="julianday" value="{{ julian_day }}">
     <input type="hidden" name="sortie" value="{{ sortie }}">
     <input type="hidden" name="year" value="{{ year }}">
+    <input type="hidden" name="project_code" value="{{ project_code }}">
     <button id="submit" type="submit" class="btn btn-primary">Submit</button>
 </form>
 <script>
-    $("#all_lines_check").change(function () {
-        $("#line_checks").prop('checked', $(this).prop("checked"));
-    });
-
-    $("#line_checks").change(function () {
-        if ($('#all_lines_check').prop('checked') == true) {
-            $("#all_lines_check").prop('checked', $(this).prop("checked"));
-        }
-    });
     function checkTextField(field) {
         if (field.value == '') {
             $('#email_section').addClass('has-warning');
         } else if (field.value != '') {
             $('#email_section').removeClass('has-warning');
         }
-        if (field.value.indexOf("@") == -1) {
+        if (field.value.indexOf(".") == -1 || field.value.indexOf("@") == -1) {
             $('#email_section').addClass('has-error');
-        } else if (field.value.indexOf("@") != -1) {
-            $('#email_section').removeClass('has-error');
-        }
-        if (field.value.indexOf(".") == -1) {
-            $('#email_section').addClass('has-error');
-        } else if (field.value.indexOf(".") != -1) {
+        } else if (field.value.indexOf(".") != -1 && field.value.indexOf(".") != -1){
             $('#email_section').removeClass('has-error');
         }
     }
