last things to get it functional, fixed confirmation function and added checking in qsub for confirmation + submission

--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -298,7 +298,7 @@ $( document).ready(function(){
     <input type="hidden" name="julianday" value="{{ julian_day }}">
     <input type="hidden" name="sortie" value="{{ sortie }}">
     <input type="hidden" name="year" value="{{ year }}">
-    <input type="hidden" name="project_code" value="{{ project_code }}">
+    <input type="hidden" name="project" value="{{ project_code }}">
     <button id="submit" type="submit" class="btn btn-primary">Submit</button>
 </form>
 <script>
